# openwilma-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs  main.rs  news_article.rs  parseable.rs  parser.rs  profile.rs  schedule.rs
src/schedule/: group.rs  mod.rs  reservation.rs  schedule.rs  teacher.rs
