[package]
name = "openwilma-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.2"
reqwest = { version = "0.11.4", features = ["cookies"] }
serde_json = "1.0.68"
tokio = { version = "1.11.0", features = ["full"] }
